# startupai-crew

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  pyproject.toml  pytest.ini
.agent/: PLANS.md
.claude/: project.md  settings.json  settings.local.json
.claude/agents/: crewai-workflow-designer.md  python-developer.md  software-architect.md
.github/workflows/: test.yml
archive/: README_LANDING_PAGE_TEST.md  netlify-landing-page-deploy.py  test_landing_page_curl.sh  test_landing_page_deploy.py
archive/amp-deployment/: AMP_ARCHIVE.md
archive/flow-architecture/: main.py
archive/flow-architecture/startupai/: crew.py  main.py
db/migrations/: 001_flow_executions.sql  003_learnings_tables.sql  004_experiment_outcomes.sql  006_decision_log.sql  007_modal_serverless_tables.sql  008_enable_validation_runs_rls.sql  009_landing_page_tables.sql
docs/: 3-crew-deployment.md  ARCHITECTURAL_REVIEW.md  IMPLEMENTATION_ANALYSIS.md  INNOVATION_PHYSICS_README.md  README.md  amp-observability-testing.md  architecture.md  environments.md  innovation-physics.md  strategyzer-physics.md  testing.md
docs/.claude/: settings.local.json
docs/adr/: 001-flow-to-crew-migration.md  002-modal-serverless-migration.md  003-landing-page-storage-migration.md  003-validation-asset-architecture.md  004-two-pass-onboarding-architecture.md  005-state-first-synchronized-loop.md  006-quick-start-architecture.md  007-hexagonal-domain.md  README.md
docs/architecture-audit/: 01-DATABASE-AUDIT.md  02-API-AUDIT.md  03-CREWAI-AUDIT.md  04-FRONTEND-AUDIT.md  EVOLUTION-PLAN.md  QA-CORRECTIONS.md  README.md  comprehensive-deficiency-report.md  modal-tool-integration-assessment.md  modal-validation-report.md
docs/concepts/: IMPLEMENTATION_ANALYSIS.md  innovation-physics.md
docs/deployment/: 3-crew-deployment.md  environments.md  production-cutover-checklist.md
docs/drafts/: eight-areas-of-improvement.md
docs/features/: api-entrypoints.md  crew-agent-task-matrix.md  flow-inventory.md  hitl-checkpoint-map.md  integration-contracts.md  phase-mapping.md  state-persistence.md  tool-wiring-matrix.md
docs/master-architecture/: 00-introduction.md  01-ecosystem.md  02-organization.md  03-methodology.md  03-validation-spec.md  03-validation-spec.old.md  04-phase-0-onboarding.md  04-status.md  05-phase-0-1-specification.md  05-phase-1-vpc-discovery.md  06-phase-2-desirability.md  07-phase-3-feasibility.md  08-phase-4-viability.md  09-status.md  10-dogfooding.md  README.md  ai-work-queue.md  current-state.md  ecosystem.md  internal-validation-system-spec.md  llm-coordination.md  llm-handoff.md  organizational-structure.md  validation-backlog.md
docs/master-architecture/archive/: 03-validation-spec.md
docs/modal-documentation/: INDEX.md  MANIFEST.json  cli-reference.md  deployment.md  functions.md  gpus.md  images.md  secrets.md  startupai-patterns.md  web-endpoints.md
docs/netlify-documentation/: INDEX.md  MANIFEST.json  api-deployment-methods.md  cli-reference.md  deployment.md  edge-functions.md  environment-variables.md  mcp-tools.md  startupai-patterns.md
docs/prompts/: README.md  prompt-improvement.md  prompt-self-learning.md  prompt-the-design.md
docs/research/: Kyro.md
docs/supabase-documentation/: INDEX.md  MANIFEST.json  cli-reference.md  edge-functions.md  mcp-tools.md  migrations.md  realtime.md  rls.md  startupai-patterns.md  storage.md
docs/testing/: APPROVAL_FLOW_SUMMARY.md  DOGFOODING_TEST_RESULTS_2026-01-12.md  approval-flow-diagram.md  approval-flow-testing.md  testing-contracts.md  testing.md
docs/tools/: README.md
docs/work/: DEPLOYMENT_GAP_ANALYSIS.md  README.md  WORK.md  backlog.md  cross-repo-blockers.md  done.md  in-progress.md  modal-live-testing.md  phases.md  roadmap.md  supabase-analysis-2026-01-10.md
migrations/: 002_validation_events.sql  005_add_policy_version_to_learnings.sql
scripts/: README_APPROVAL_TESTING.md  evaluate_policies.py  post_deploy_validation.sh  quick_approval_test.sh  seed_demo_project.py  simulate_flow.py  test_approval_flow.sh  test_e2e_webhook.sh  track_performance.py
src/: gate_scoring.py
src/crews/: __init__.py
src/intake_crew/: __init__.py  crew.py  main.py  schemas.py
src/modal_app/: __init__.py  app.py  config.py
src/shared/: __init__.py  gate_policies.py
src/startupai/: __init__.py  crew.py  crew_old.py  main.py  tools.py
src/state/: __init__.py  models.py  persistence.py
src/tools/: __init__.py
startupai-crews/crew-1-intake/: pyproject.toml
startupai-crews/crew-2-validation/: pyproject.toml
startupai-crews/crew-3-decision/: pyproject.toml
tests/: __init__.py  conftest.py  test_area_improvements.py  test_crew_input_context.py  test_decision_log.py  test_desirability_crews.py  test_e2e_validation_scenarios.py  test_events.py  test_feasibility_crews.py  test_flow_routing.py  test_hitl_contracts.py  test_hitl_iterate_segment_pivot.py  test_hitl_state_transitions.py  test_innovation_physics_routing.py  test_intake_schemas.py  test_modal_api_integration.py  test_modal_state_models.py  test_narrative_crew.py  test_onboarding_crew.py  test_persistence_repository.py  test_pivot_workflow.py  test_routing_logic.py  test_signal_routing_comprehensive.py  test_state_schemas.py  test_value_map_effectiveness.py  test_viability_crews.py  test_vpc_discovery_crews.py  test_webhook_delivery.py  test_yaml_template_validation.py
tests/integration/: __init__.py  test_build_crew.py  test_e2e_pipeline.py  test_flywheel_workflow.py  test_hitl_workflow.py  test_modal_e2e.py  test_privacy_guard.py  test_viability_workflow.py
tests/scenarios/: test_scenarios.json
tests/tools/: __init__.py  test_advanced_analysis.py  test_analytics_privacy.py  test_customer_research.py  test_landing_page_deploy.py  test_llm_tools.py
(+192 files in other folders)
