[project]
name = "startupai-intake-crew"
version = "1.0.0"
description = "StartupAI Intake Crew - Parse founder input, research, create VPC, QA gate"
readme = "README.md"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "crewai-tools>=0.17.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "tavily-python>=0.3.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
startupai-intake-crew = "intake_crew.main:run"
run_crew = "intake_crew.main:run"
train = "intake_crew.main:train"
replay = "intake_crew.main:replay"
test = "intake_crew.main:test"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intake_crew"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "responses>=0.25.0",
]
