[project]
name = "startupai-intake-crew"
version = "1.0.0"
description = "StartupAI Intake Crew - Parse founder input, research, create VPC, QA gate"
readme = "README.md"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
    "crewai-tools>=0.17.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "tavily-python>=0.3.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.11.0",
    # Ad Platform SDKs (Epic 4)
    "facebook-business>=19.0.0",      # Meta Marketing API
    "google-ads>=25.0.0",             # Google Ads API
    "requests-oauthlib>=2.0.0",       # X/Twitter OAuth 1.0A
    "pinterest-api-sdk>=0.2.0",       # Pinterest Ads API
]

[project.scripts]
startupai-intake-crew = "intake_crew.main:run"
run_crew = "intake_crew.main:run"
train = "intake_crew.main:train"
replay = "intake_crew.main:replay"
test = "intake_crew.main:test"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/intake_crew"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "responses>=0.25.0",
]
