[project]
name = "startupai-intake-crew"
version = "0.1.0"
description = "StartupAI Intake Crew - Parse founder input, research, create VPC, QA gate"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
startupai-intake-crew = "intake_crew.main:run"
run_crew = "intake_crew.main:run"
train = "intake_crew.main:train"
replay = "intake_crew.main:replay"
test = "intake_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
