[project]
name = "startupai-decision-crew"
version = "0.1.0"
description = "StartupAI Decision Crew - Synthesize evidence and present pivot/proceed options"
authors = [{ name = "Chris Walker", email = "chris@startupai.site" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.4.1",
]

[project.scripts]
startupai-decision-crew = "decision_crew.main:run"
run_crew = "decision_crew.main:run"
train = "decision_crew.main:train"
replay = "decision_crew.main:replay"
test = "decision_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
